<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ersatz</string>

    <string name="main_ui_no_ripostes">There are currently no Ripostes in the system.</string>
    <string name="main_context_configure">Configure</string>
    <string name="main_context_remove">Remove</string>
    <string name="main_option_add">Add</string>
    <string name="main_option_enable_all">Enable All</string>
    <string name="main_option_disable_all">Disable All</string>

    <string name="edit_context_remove">Remove</string>
    
    <string name="edit_option_insert_plant">Insert Template ...</string>
    <string name="edit_ui_title">Configure Riposte ...</string>
    <string name="edit_ui_riposte_name">Name: </string>
    <string name="edit_ui_message">Message: </string>


    <string name="edit_ui_browse">Add Recipient ...</string>
    <string name="edit_ui_no_targets">There are currently no targets for this riposte.</string>
    <string name="edit_ui_targets">Recipients</string>

    <string name="insert_plant_ui_title">Insert Template</string>
    <string name="insert_plant_ui_hint">Choose Template</string>
    <string name="insert_plant_ui_label">Template: </string>
    <string name="insert_plant_ui_preview">Preview</string>
    <string name="insert_plant_no_template">No template selected.</string>
    
    <string name="tab_general">General</string>
    <string name="tab_message">Message</string>
    <string name="tab_recipients">Recipients</string>
    
    <string name="ersatz_settings">Settings</string>
    <string name="settings_ui_cooloff">Cooloff Period: </string>
    <string name="settings_ui_cooloff_hint">Select number of minutes</string>
    <string name="settings_ui_minutes">minute(s)</string>

    <string-array name="settings_ui_cooloff_options">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string name="ui_confirm">Confirm</string>
    <string name="ui_cancel">Cancel</string>

    <string name="ersatz_active">--- ERSATZ ACTIVE ---</string>


</resources>


