<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:text="@string/settings_ui_cooloff"
                />
        <Spinner
                android:id="@+id/cooloff_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:prompt="@string/settings_ui_cooloff_hint"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:text="@string/settings_ui_minutes"
                />



    </LinearLayout>

    <!--FIX 26/01/2012 This needs to be reused rather than just copied from riposte_edit. How to do this in Android? -->
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                  android:layout_height="fill_parent">
        <Button android:id="@+id/cancel"
                android:text="@string/ui_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"  android:layout_gravity="bottom"/>

        <Button android:id="@+id/confirm"
                android:text="@string/ui_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"  android:layout_gravity="bottom"/>
    </LinearLayout>

</LinearLayout>