<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" android:layout_height="fill_parent"
              android:orientation="vertical">

    <include layout="@layout/riposte_edit_header" />

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_below="@+id/riposte_edit_tabs"
            android:layout_height="0dip"
            android:layout_weight="1.0"
            android:id="@+id/riposte_edit_tab_view"
            >

        <LinearLayout android:id="@+id/tab_general"
                      android:orientation="vertical"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent">
            <EditText android:id="@+id/name"
                      android:layout_alignParentTop="true"
                      android:layout_marginTop="5dip"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:lines="1"
                      android:singleLine="true"
                      android:hint="@string/edit_ui_riposte_name"
                      android:inputType="text"
                      android:gravity="top"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/tab_recipients"
                      android:orientation="vertical"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content">
            <Button android:id="@+id/browse"
                        android:text="@string/edit_ui_browse"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"/>
            <ListView android:id="@android:id/list"
                      android:layout_width="fill_parent"
                      android:layout_height="0dip"
                      android:layout_weight="1.0"/>
            <TextView android:id="@android:id/empty"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/edit_ui_no_targets"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/tab_message"
                      android:orientation="vertical"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent">
            <EditText android:id="@+id/message"
                      android:layout_marginTop="5dip"
                      android:layout_width="match_parent"
                      android:layout_height="fill_parent"
                      android:lines="5"
                      android:layout_weight="1.0"
                      android:hint="@string/edit_ui_message"
                      android:inputType="textCapSentences|textMultiLine"
                      android:gravity="top"
                      android:scrollbars="vertical"/>
        </LinearLayout>
    </FrameLayout>

    <include layout="@layout/riposte_edit_footer"/>

</LinearLayout>